--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
+[Pp]ackages/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
@@ -154,3 +155,6 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+*.chk
+*.jrs
+*.ide
